--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
-  "name": "com.stupidshitcreate.cardinalsystem",
+  "name": "com.stupidshitcreate.cardinal",
   "version": "1.0.0",
-  "displayName": "CARDINAL"
+  "displayName": "CARDINAL",
+  "description": "This is an example package",
+  "unity": "2019.1",
+  "unityRelease": "0b5",
+  "documentationUrl": "https://example.com/",
+  "changelogUrl": "https://example.com/changelog.html",
+  "licensesUrl": "https://example.com/licensing.html",
+  "keywords": [
+    "keyword1",
+    "keyword2",
+    "keyword3"
+  ],
+  "author": {
+    "name": "Unity",
+    "email": "unity@example.com",
+    "url": "https://www.unity3d.com"
+  }
 }
