--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "keyword3"
   ],
   "author": {
-    "name": "Unity",
-    "email": "unity@example.com",
-    "url": "https://www.unity3d.com"
+    "name": "ShuraProger",
+    "email": "stupidshitcreate@gmail.com",
   }
 }
