--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   ],
   "author": {
     "name": "ShuraProger",
-    "email": "stupidshitcreate@gmail.com",
+    "email": "stupidshitcreate@gmail.com"
   }
 }
