--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "keyword3"
   ],
   "author": {
-    "name": "ShuraProger",
-    "email": "stupidshitcreate@gmail.com"
+    "name": "Unity",
+    "email": "unity@example.com",
+    "url": "https://www.unity3d.com"
   }
 }
