--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.stupidshitcreate.cardinal",
-  "version": "1.1.15",
+  "version": "1.1.0",
   "displayName": "CARDINAL",
   "description": "This is an example package",
   "unity": "2019.1",
@@ -14,7 +14,7 @@
     "keyword3"
   ],
   "author": {
-    "name": "Unity",
+    "name": "ShuraProger",
     "email": "unity@example.com",
     "url": "https://www.unity3d.com"
   }
